--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: show cwd
           command: ls
       - run:
-          name: Build and push Docker image
+          name: Build Docker image
           command: |
             docker build -t "${CLOUD_CANISTER_URL}:latest" .
       - run:
